fix router + collapse

--- a/src/sass/components/_Collapse.scss
+++ b/src/sass/components/_Collapse.scss
@@ -12,7 +12,6 @@
     }
 }
 
-
 .collapse {
     &_header {
         display: flex;
@@ -20,7 +19,9 @@
         justify-content: space-between;
         align-items: center;
         padding: 20px;
+        width: 100%;
         height: 52px;
+        border: none;
         background-color: $color-main;
         color: $color-white;
         border-radius: 5px;
@@ -33,35 +34,20 @@
                 font-size: $small-font-size;
             }
         }
-        &--upbtn {
+        &--btn {
             border: none;
             background-color: $color-main;
-            transform: rotate(0deg);
-	        transition: 0.5s ease-in-out;
-        }
-        &--downbtn {
-            border: none;
-            background-color: $color-main;
-            transform: rotate(-180deg);
-	        transition: 0.5s ease-in-out;
+            cursor: pointer;         
         }
     }
-    &_text {
-        max-height: 200px;
+    &_body {
         background-color: $color-background;
         color: $color-main;
-        padding: 20px;
-        transition: height 5s;
-        p {
-            animation: showtext 5s;
-        @keyframes showtext {
-            0% {
-                transform: translateY(-77px);
-            }
-            100% {
-                transform: translateY(0);
-            }
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.5s ease-out;  
+        &--text {
+            padding: 20px;
         }
-        }
-    }
+      }
 }
